fix(widget): box shadow & top position gap

--- a/src/content-script-2/app.module.scss
+++ b/src/content-script-2/app.module.scss
@@ -6,11 +6,6 @@
     margin: 6px 0;
   }
 
-  &__border-top {
-    height: 6px;
-    background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.2));
-  }
-
   &__actions > * {
     cursor: pointer;
   }
